# learn-python-with-ai

./: LICENSE  README.md  README_es.md  README_zh.md  pyproject.toml  requirements.txt  sample_analysis.json
lesson_01_intro_to_python/: exercise.py  instructions.md  solution.py
lesson_02_variables_and_data_types/: exercise.py  instructions.md  solution.py
lesson_03_basic_operators/: instructions.md  solution.py
lesson_04_user_input_and_type_casting/: exercise.py  solution.py
lesson_05_conditional_statements/: exercise.py  instructions.md  solution.py
lesson_06_lists/: exercise.py  instructions.md  solution.py
lesson_07_list_methods/: exercise.py  instructions.md
lesson_08_for_loops/: exercise.py
lesson_09_while_loops/: solution.py
lesson_10_dictionaries/: exercise.py  solution.py
lesson_11_tuples_and_sets/: exercise.py  instructions.md  solution.py
lesson_12_defining_and_calling_functions/: solution.py
lesson_13_function_arguments_and_return_values/: solution.py
lesson_14_variable_scope/: instructions.md  solution.py
lesson_15_modules_and_importing/: exercise.py  solution.py
lesson_16_file_io_reading/: exercise.py  instructions.md
lesson_18_error_handling/: solution.py
lesson_19_oop_intro/: solution.py
lesson_20_next_steps/: exercise.py  solution.py
lesson_21_oop_inheritance/: exercise.py  instructions.md  solution.py
lesson_22_oop_polymorphism/: instructions.md  solution.py
lesson_23_oop_encapsulation/: instructions.md
lesson_24_oop_dunder_methods/: exercise.py  instructions.md
lesson_26_list_comprehensions/: exercise.py  (+1 more)
(+190 files in other folders)
